# SynRD

./: .buildinfo  .gitignore  README.html  README.md  _config.yml  _toc.yml  example.ipynb  example.py  genindex.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: make_book.yml  python-publish.yml  run_setup_py.yml
SynRD/: __init__.py  fruiht2018naturally_dataframe.pickle  iverson22football_dataframe.pickle  private_data_generator.py  publication.py  publication_aggregator.py  requirements.txt  utils.py
SynRD/archive/: README.md
SynRD/benchmark/: __init__.py  benchmark.py  plotting_utils.py  publication_aggregator.py
SynRD/datasets/: NSDUH.py  __init__.py  dataset.py  dataset_loader.py  (+1 more)
docs/: api.md  findings.md  quickstart.md
notebooks/: generate_figures.ipynb  generate_private_data.ipynb  simple_walkaround.ipynb
papers/: README.md  __init__.py  fairman19marijuana_dataframe.pickle  file_utils.py  generate_figures.html  generate_figures.ipynb  generate_private_data.ipynb  jeong2021math_dataframe.pickle  lee2021ability_dataframe.pickle  meta_classes.py  plotting_utils.py  private_data_generator.py  publication_aggregator.py  requirements.txt  saw2018cross_dataframe.pickle  temp.csv
papers/marijuana19fairman/explore_data/: Cargo.toml
papers/marijuana19fairman/explore_data/src/: main.rs
samples/: example.ipynb
synthesizers/: sample_walkthrough.ipynb:Zone.Identifier
tests/: test_papers.py  test_saw2018cross.py  test_system.py
web/: formatted_data.json  index.html  preprocess.ipynb
(+364 files in other folders)
