[package]
name = "explore_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
anyhow = "1.0.58"
indicatif = { version = "0.16.2", features = ["rayon"] }
rayon = "1.5.3"
itertools = "0.10.3"
